Prevent image content overflow

--- a/styles.css
+++ b/styles.css
@@ -20,3 +20,10 @@ body {
     display: flex;
     flex-direction: column;
 }
+
+.heading-section {
+    position: relative;
+    width: 40%;
+    height: 100%;
+    overflow: hidden;
+}
